--- a/teste 1.0/style.css
+++ b/teste 1.0/style.css
@@ -38,7 +38,8 @@ body *{
 }
 
 #conteiner{
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     /*border: 1px solid red;*/
     /*margin cima, lado baixo*/
     margin: 56px auto 0px;
