--- a/teste 1.0/style.css
+++ b/teste 1.0/style.css
@@ -87,12 +87,18 @@ body *{
     left: 0;
     z-index: 1;
     transform: translatey(-50%);
+
+    animation: slide-back 0.3s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-white 0.3s forwards;
 }
+
+#switch button:hover{
+    outline: 8px solid var(--highlight-color);
+}
+
 
 #switch span{
     display: block;
@@ -175,6 +181,22 @@ footer{
     .light{
         --bg-url: url(./assets/assets/bg-desktop-light.jpg);
     }
+}
 
+@keyframes slide-white{
+    from{
+        left: 0;
+    }
+    to{
+        left: 50%;
+    }
+}
 
+@keyframes slide-back{
+    from{
+        left: 50%;
+    }
+    to{
+        left: 0;
+    }
 }
